--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springboot-dio</name>
 	<description>Demo project for Spring Boot</description>
+
+	<packaging>war</packaging>
+
 	<properties>
-		<java.version>17</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
